# Rootless

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  make_env_centos.sh
src/: attr.cpp  basic.cpp  dir.cpp  dir.h  funcs.h  hash_map.h  hooks.cpp  link.cpp  make_path.cpp  shadow_path.cpp  shadow_path.h  time.cpp  user.cpp
